--- a/SmartCityHomescreen/nbproject/project.properties
+++ b/SmartCityHomescreen/nbproject/project.properties
@@ -61,7 +61,7 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
-main.class=smartcityhomescreen.SmartCityHomescreen
+main.class=smartcityhomescreen.HomeScreen
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
